--- a/AudinaMirellaSyaharani_XII-RPL-1.html
+++ b/AudinaMirellaSyaharani_XII-RPL-1.html
@@ -95,9 +95,9 @@
       <li><a href="#">Kontak</a></li>
     </ul>
   </div>
-  <h1 style="text-align: center;">PEMBELI COOKIES</h1>
+  <h1 style="text-align: center;">PEMESANAN COOKIES</h1>
   <form action="" method="POST">
-    <label for="nama_pembeli">Nama Pembeli:</label>
+    <label for="nama_pembeli">Nama Pemesan:</label>
     <input type="text" id="nama_pembeli" name="nama_pembeli" required>
     <label for="jenis_cookies">Jenis Cookies:</label>
     <select id="jenis_cookies" name="jenis_cookies" required>
